# rawatbunda

./: .gitignore  HANDOFF.md  IBURUJUK_PRD.md  PERSON_B_IMPLEMENTATION_PLAN.md  RAWATBUNDA_PRD_V2.md  RAWATBUNDA_PRD_V2rev.md  README.md  TEAM_PLAN.md  UI_UX_IMPLEMENTATION_PLAN.md  pubspec.yaml
ML-Classification/: .dockerignore  .env.example  Dockerfile  README.md  predict.py  pyproject.toml  requirements-dev.txt  requirements.txt  serve_backend.py  train.py
ML-Classification/artifacts/: artifact_manifest.json  maternal_risk_model.joblib  maternal_risk_model.joblib.sha256
ML-Classification/examples/: synthetic_assessment.json
ML-Classification/iburujuk_ml/: __init__.py  api.py  auth.py  backend.py  backend_contracts.py  clinical_contracts.py  contracts.py  data.py  environment.py  evaluation.py  inference.py  modeling.py  persistence.py  policy.py  response_validation.py  robustness.py  stt.py
ML-Classification/iburujuk_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ML-Classification/schemas/: assessment_evaluation_request.schema.json
ML-Classification/tests/: test_backend.py
STT/: main.py  requirements.txt  schema.sql
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/data/: synthetic_data.dart  synthetic_patients.dart
lib/models/: app_profile.dart  (+5 more)
linux/: CMakeLists.txt
test/: patient_directory_test.dart  person_b_workflow_test.dart  priority_rules_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+52 files in other folders)
